update not resposive

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kim Chakriya Profile</title>
+    <title>Chakriya Promthong Profile</title>
     <link rel="stylesheet" href="./resume_style.css">
     <link href="https://fonts.googleapis.com/css2?family=Balsamiq+Sans:ital@1&family=Roboto&display=swap"
         rel="stylesheet">
@@ -20,9 +20,10 @@
     <div id="header">
         <img class="image-profile" alt="image profile" src="./asset/Adjustments (2).plist" width="200"
             height="200"></img>
-        <div class="col-4 col-s-4 typewriter">
-            <h1>I'm Chakriya</h1>
-            <h5>sit amet consectetur adipisicing elit. Animi iusto </h5>
+        <div class="col-4 col-s-4 typewriter" id="name">
+            <h1 >I'm Chakriya</h1>
+
+            <!-- <h5>sit amet consectetur adipisicing elit. Animi iusto </h5> -->
         </div>
 
         <div class="content">
@@ -68,11 +69,9 @@
 
     <div id="about-me">
         <h2>About Me</h2>
-        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Iste quia, officiis ipsa
-            aliquam at necessitatibus,
-            et earum reiciendis cumque porrrem placeat consequuntur, aliquid itaque ab omnis!
-            Provident! Lorem ipsu
-            necessitatibus ratione quibusdam dolorem!</p>
+        <p>I am Chakriya Promthong. A third-year Computer Engineering staudent from Khon Kaen University, Thailand.
+<br>
+            I truly enjoy working in a team environment, and I get along well with many different personality types.</p>
     </div>
 
     <div id="education-language">
