delete link facebook

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </div>
 
         <div class="content">
-            <a href="https://www.facebook.com/profile.php?id=100018071239155"> <i class="fab fa-facebook-square">
+            <a href="#"> <i class="fab fa-facebook-square">
                 </i></a>
             <a href="https://www.instagram.com/kimcha__/?hl=th"><i class="fab fa-instagram"></i> </a>
             <a href="https://linkinprofile.com/dashboard#_"><i class="fab fa-linkedin-in"></i></a>
